# RatPM

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  clippy.toml  deny.toml  ratpm.toml.example  rustfmt.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  release.yml  security.yml
benches/: config_bench.rs  transaction_bench.rs
docs/: ARCHITECTURE.md  DEVELOPMENT.md  FAQ.md  SECURITY.md  TESTING.md  ratpm.8.md  ratpm.toml.5.md
libdnf5-sys/: Cargo.toml  build.rs  wrapper.h
libdnf5-sys/src/: lib.rs
scripts/: build-rpm.sh  check-deps.sh  dev-setup.sh  install.sh  run-benchmarks.sh  test-install.sh  uninstall.sh
src/: lib.rs  main.rs
src/backend/: mod.rs
src/backend/fedora/: libdnf.rs  mod.rs  repos.rs  rpm.rs  transaction.rs  types.rs
src/cli/: commands.rs  mod.rs  output.rs
src/config/: mod.rs  schema.rs
src/core/: context.rs  errors.rs  lock.rs  mod.rs  resolver.rs  transaction.rs
systemd/: ratpm-refresh.service  ratpm-refresh.timer
tests/: backend_test.rs  config_test.rs  error_test.rs  integration_test.rs  lock_test.rs  transaction_test.rs
