[package]
name = "ratpm"
version = "1.0.0"
edition = "2021"
authors = ["RatOS Team"]
license = "GPL-3.0-or-later"
description = "Primary package manager for RatOS"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
nix = { version = "0.27", features = ["fs", "user"] }
rpm = "0.13"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
