[package]
name = "ratpm"
version = "1.0.0"
edition = "2021"
authors = ["RatOS Team"]
license = "GPL-3.0-or-later"
description = "Primary package manager for RatOS"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
nix = { version = "0.27", features = ["fs", "user", "process", "signal"] }
rpm = "0.13"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19"
libdnf5-sys = { path = "libdnf5-sys" }
chrono = "0.4"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[workspace]
members = [".", "libdnf5-sys"]

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"

[lib]
name = "ratpm"
path = "src/lib.rs"

[[bin]]
name = "ratpm"
path = "src/main.rs"

[[bench]]
name = "transaction_bench"
harness = false

[[bench]]
name = "config_bench"
harness = false
